--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "repository": "https://github.com/evenchange4/react-intl-cra",
   "author": "Michael Hsu <evenchange4@gmail.com>",
   "license": "MIT",
-  "files": ["src", "bin"],
+  "files": [
+    "src",
+    "bin"
+  ],
   "main": "src/index.js",
   "bin": {
     "react-intl-cra": "bin/index.js"
@@ -14,48 +17,55 @@
     "test": "NODE_ENV='test' jest --coverage --runInBand",
     "test:watch": "npm run test -- --watch",
     "eslint": "eslint ./",
-    "format":
-      "prettier --write 'src/**/*.{js,json}' 'bin/**/*.{js,json}' 'tests/**/*.{js,json}' '*.md'",
+    "format": "prettier --write 'src/**/*.{js,json}' 'bin/**/*.{js,json}' 'tests/**/*.{js,json}' '*.md'",
     "flow": "flow",
     "flow-coverage": "flow-coverage-report",
     "precommit": "lint-staged",
-    "changelog":
-      "github-changes -o evenchange4 -r react-intl-cra -b master -f ./CHANGELOG.md --order-semver --use-commit-body"
+    "changelog": "github-changes -o evenchange4 -r react-intl-cra -b master -f ./CHANGELOG.md --order-semver --use-commit-body"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-plugin-react-intl": "^2.4.0",
-    "babel-preset-react-app": "^3.1.1",
+    "@babel/core": "7.1.0",
+    "babel-plugin-react-intl": "^3.0.1",
+    "babel-preset-react-app": "^6.1.0",
     "chalk": "^2.3.0",
     "glob": "^7.1.2",
     "ramda": "^0.25.0",
     "yargs": "^11.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.1",
-    "codecov": "3.0.0",
-    "eslint": "4.17.0",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-flowtype": "2.42.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jest": "21.7.0",
-    "eslint-plugin-prettier": "2.6.0",
+    "babel-eslint": "9.0.0",
+    "codecov": "3.1.0",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "3.3.0",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "22.0.0",
+    "eslint-plugin-prettier": "3.0.0",
     "flow-bin": "0.64.0",
     "flow-coverage-report": "0.4.1",
     "github-changes": "1.1.2",
     "husky": "0.14.3",
     "jest": "22.1.4",
     "lint-staged": "6.1.0",
-    "prettier": "1.10.2"
+    "prettier": "1.15.2"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.{js,jsx}"],
-    "testPathIgnorePatterns": ["<rootDir>/node_modules/"]
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ]
   },
   "flow-coverage-report": {
-    "excludeGlob": ["node_modules/**"],
-    "includeGlob": ["src/**/*.js", "bin/**/*.js"],
+    "excludeGlob": [
+      "node_modules/**"
+    ],
+    "includeGlob": [
+      "src/**/*.js",
+      "bin/**/*.js"
+    ],
     "threshold": 90,
     "type": "text"
   },
@@ -64,7 +74,10 @@
     "singleQuote": true
   },
   "lint-staged": {
-    "*.{js,json,md}": ["prettier --write", "git add"]
+    "*.{js,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "parser": "babel-eslint",
@@ -74,7 +87,10 @@
       "prettier/flowtype",
       "plugin:jest/recommended"
     ],
-    "plugins": ["prettier", "jest"],
+    "plugins": [
+      "prettier",
+      "jest"
+    ],
     "env": {
       "jest/globals": true
     },
